console.error(e))
[eval]:1
const http=require('http');function req(m,p,b,t){return new Promise((res,rej)= d=b?JSON.stringify(b):null;const h={'Content-Type':'application/json'};if(t)h['Authorization']='Bearer '+t;if(d)h['Content-Length']=Buffer.byteLength(d);const o={hostname:'127.0.0.1',port:13000,path:p,method:m,headers:h};const r=http.request(o,re= raw='';re.on('data',c==c);re.on('end',()=,b:JSON.parse(raw)});}catch{res({s:re.statusCode,b:raw});}});});r.on('error',rej);if(d)r.write(d);r.end();});}async function m(){const a=await req('POST','/api/auth:signIn',{email:'admin@nocobase.com',password:'admin123'});const t=a.b.data.token;const r1=await req('GET','/api/collections/apparatuses/fields?paginate=false',null,t);console.log('apparatuses fields:',JSON.stringify(r1.b).substring(0,500));const r2=await req('GET','/api/collections/apparatus_defects/fields?paginate=false',null,t);console.log('apparatus_defects fields:',JSON.stringify(r2.b).substring(0,300));}m().catch(e=;
                                                                    ^^^^^^^^^

SyntaxError: Invalid left-hand side in assignment
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.0
